RESOLVED FIXED253769
[GStreamer] Unmute doesn't work
https://bugs.webkit.org/show_bug.cgi?id=253769
Summary [GStreamer] Unmute doesn't work
Christopher Davis
Reported 2023-03-11 17:19:10 PST
After muting a tab in Epiphany, unmuting the app does not restore sound. The user needs to refresh the page or navigate to a different page in order for sound to return. See: https://gitlab.gnome.org/GNOME/epiphany/-/issues/1958
Attachments
Philippe Normand
Comment 1 2023-03-12 09:32:48 PDT
Here in MiniBrowser on Fedora 37, with pipewire-pulseaudio I can mute and un-mute a webview once and afterwards whatever I do, without going to the GNOME sound panel and un-muting the WebProcess, the WebView remains muted. I have a patch fixing this and then I can reliably mute/un-mute tabs.
Philippe Normand
Comment 2 2023-03-12 09:42:15 PDT
EWS
Comment 3 2023-03-14 09:51:19 PDT
Committed 261635@main (7e9d65f61a53): <https://commits.webkit.org/261635@main> Reviewed commits have been landed. Closing PR #11419 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-03-14 09:52:18 PDT
Note You need to log in before you can comment on or make changes to this bug.