Cherry-pick 261635@main (7e9d65f61a53). https://bugs.webkit.org/show_bug.cgi?id=253769

[GStreamer] Unmute doesn't work
    https://bugs.webkit.org/show_bug.cgi?id=253769

    Reviewed by Carlos Garcia Campos and Xabier Rodriguez-Calvar.

    The player now maintains an internal variable for the audio sink mute state, in order to avoid
    false-positive mute change notifications. Receiving a notify::mute signal from the pipeline doesn't
    necessarily means the mute state has changed, for instance the PulseAudio sink emits that signal
    unconditionally before starting up.

    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::isMuted const):
    (WebCore::MediaPlayerPrivateGStreamer::setMuted):
    (WebCore::MediaPlayerPrivateGStreamer::notifyPlayerOfMute):
    (WebCore::MediaPlayerPrivateGStreamer::handleMessage):
    (WebCore::MediaPlayerPrivateGStreamer::setStreamVolumeElement):
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

    Canonical link: https://commits.webkit.org/261635@main